[project]
name = "reminiscence-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "redis>=7.4.0",
    "torch==2.2.2",                 # Locked to the final Intel Mac version
    "numpy<2.0.0",                  # Fixes the NumPy 2.4.6 crash on Intel
    "sentence-transformers<3.0.0",  # Keeps it compatible with PyTorch 2.2.2
]
[tool.uv]
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'x86_64'"
]
